@@ -1,5 +1,9 @@
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.550 2006/02/02 14:10:59 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.551 2006/02/02 15:17:03 rocket Exp $
+
+  02 Feb 2006; Eric Edgar <rocket@gentoo.org>
+  targets/support/bootloader-setup.sh:
+  Change [ console ] to -console in yaboot.conf for ppc64.  Spaces arent allowed
 
   02 Feb 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst:
   This is catalyst 2.0_rc29.
